resources/public/css/style.css
/*This file is automatically generated. Any changes made will be overwritten by dev/gardener.clj*/


* {
  margin: 0;
  padding: 0;
  font-family: Karma, sans-serif;
  font-weight: normal;
  font-size: 13px;
}

html {
  height: calc(100%  -  20px);
}

body {
  background-image: url(../img/solar_bg.jpg);
  height: 100%;
  width: 100%;
  position: relative;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: right, center;
  background-size: cover;
}

h1, h2, h3, h4, h5, h6 {
  font-size: 25px;
  font-family: Envision, serif;
  font-weight: bold;
  color: #041648;
}

h1 p, h2 p, h3 p, h4 p, h5 p, h6 p {
  font-weight: normal;
}

#app {
  width: 100%;
}

#app-frame {
  top: 0;
  left: 0;
  height: 100%;
  margin-right: 0;
  width: 100%;
  position: relative;
}

#app-frame .page-title {
  width: 100%;
  top: 0;
  height: 45px;
  padding: 0;
  text-align: center;
  position: fixed;
  z-index: 110;
  font-size: 37px;
  background-image: url(../img/brushed_metal.png), linear-gradient(hsla(44.505493, 89.21568%, 25%, 0.8), hsla(44.505493, 89.21568%, 30%, 0.8), hsla(44.505493, 89.21568%, 35%, 0.8), hsla(44.505493, 89.21568%, 40%, 0.8), hsla(44.505493, 89.21568%, 45%, 0.8), hsla(44.505493, 89.21568%, 65%, 0.8), hsla(44.505493, 89.21568%, 90%, 0.8));
  text-shadow: 0 0 10px #f1b70e;
}

#app-frame .page-title h1 {
  font-size: inherit;
}

#app-frame #menu {
  color: white;
  bottom: -200px;
  transition: left, 0.5s;
  width: 100%;
  z-index: 50;
  display: block;
  position: fixed;
  height: 200px;
  left: 0px;
}

#app-frame #menu:hover {
  left: 0%;
  bottom: 0px;
}

#app-frame #menu ul {
  position: relative;
  box-shadow: inset 0 0 5px black;
  overflow: hide;
  height: 100%;
  padding-left: 15px;
  background: #667399;
}

#app-frame #menu ul li {
  display: block;
  border-bottom-style: groove;
  border-bottom-color: #3d455c;
  border-bottom-width: 1px;
  font-size: 20px;
  width: calc(100%  -  30px);
  padding: 4px;
}

#app-frame #menu ul li:last {
  border: none;
}

#app-frame #menu ul li:before {
  content: "";
}

#app-frame #menu .tab {
  box-shadow: 0 0 5px black;
  bottom: -5px;
  background-color: #667399;
  width: 40px;
  right: 10px;
  display: block;
  position: fixed;
  border-radius: 5px;
  height: 40px;
}

#app-frame #content {
  position: relative;
}

#app-frame #content .page {
  position: relative;
  margin-top: 45px;
}

#app-frame #content .page .section {
  background-image: url(../img/canvas_paper.png);
  border-width: 1px;
  border-color: #f4c53e;
  position: relative;
  width: 100%;
  box-shadow: 0 -3px 10px #666666;
  z-index: 10;
}

#app-frame #content .page .section h3 {
  background-image: url(../img/brushed_metal.png), linear-gradient(hsla(44.505493, 89.21568%, 15%, 0.8), hsla(44.505493, 89.21568%, 20%, 0.8), hsla(44.505493, 89.21568%, 25%, 0.8), hsla(44.505493, 89.21568%, 30%, 0.8), hsla(44.505493, 89.21568%, 35%, 0.8), hsla(44.505493, 89.21568%, 55%, 0.8), hsla(44.505493, 89.21568%, 80%, 0.8));
  font-size: 20px;
  position: sticky;
  top: 45px;
  padding: 5px;
}

#app-frame #content .page .section .interior {
  padding: 15px;
}

#app-frame #content .page .section .interior ul li {
  list-style: none;
}

#app-frame #content .page .section .interior ul li * {
  display: block;
  width: 100%;
}

.desktop .menu-assembly {
  position: fixed;
  left: 0;
  width: 200px;
}

.desktop .pages {
  width: 100%;
  position: fixed;
  right: 0;
}

.desktop .pages .page {
  display: inline-block;
  position: fixed;
  top: 0;
}

.desktop .pages .page:nth-child(1n) {
  width: 30%;
  left: 0;
}

.desktop .pages .page:nth-child(2n) {
  width: 70%;
  left: 30%;
}

.desktop .pages .page-content {
  width: 100%;
}


@Supports (grid-template-areas: "...") {
     .desktop span.row-container {
  display: inline-block;
  width: 100%;
}

.desktop .page h1.page-title {
  position: absolute;
}

.desktop .page .page-content {
  overflow: scroll;
  height: calc(100%  -  30px);
}

.desktop .character-page .page-content {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
}

.desktop .character-page .page-content .page-header {
  grid-area: head;
}

.desktop .character-page .page-content .coreinfo {
  grid-area: core;
}

.desktop .character-page .page-content .coreinfo form {
  column-count: 2;
}

.desktop .character-page .page-content .rulebooks-used {
  grid-area: chrn;
}

.desktop .character-page .page-content .attributeinfo {
  grid-area: attr;
}

.desktop .character-page .page-content .attributeinfo form {
  column-count: 3;
}

.desktop .character-page .page-content .attributeinfo form .field {
  width: 50%;
}

.desktop .character-page .page-content .attributeinfo form p, .desktop .character-page .page-content .abilityinfo form p {

}

.desktop .character-page .page-content .attributeinfo form p label, .desktop .character-page .page-content .abilityinfo form p label {
  width: 30%;
}

.desktop .character-page .page-content .attributeinfo form p p, .desktop .character-page .page-content .abilityinfo form p p {

}

.desktop .character-page .page-content .abilityinfo {
  grid-area: abil;
}

.desktop .character-page .page-content .abilityinfo .field {
  width: calc(50%  +  22px);
}

.desktop .character-page .page-content .additional-ability-info {
  grid-area: abad;
}

.desktop .character-page .page-content .crafting-slot-info {
  grid-area: slot;
}

.desktop .character-page .page-content .favoredabilities {
  grid-area: favo;
}

.desktop .character-page .page-content .specialtyinfo {
  grid-area: spec;
}

.desktop .character-page .page-content .health-track-module {
  grid-area: heal;
}

.desktop .character-page .page-content .health-track-module .button-bar {
  display: inline-block;
}

.desktop .character-page .page-content .intimacyinfo {
  grid-area: inti;
}

.desktop .character-page .page-content .charminfo {
  grid-area: char;
}

.desktop .character-page .page-content .meritinfo {
  grid-area: meri;
}

.desktop .character-page .page-content .weapon-info {
  grid-area: weap;
}

.desktop .character-page .page-content .essence-module {
  grid-area: essi;
}

.desktop .character-page .page-content .essence-module form {
  column-count: 1;
}

.desktop .character-page .page-content .willpower-module {
  grid-area: will;
}

.desktop .character-page .page-content .experience-module {
  grid-area: xpxp;
}

.desktop .character-page .page-content .crafting-experience-module {
  grid-area: crxp;
}

.desktop .character-page .page-content .limit-info {
  grid-area: limt;
}

@media (min-width: 700px) {

  .desktop .character-page .page-content {
    grid-template-areas: 
"head head head head head head head head head"
".... .... .... .... .... .... .... .... ...."
"core core core core core core core core core"
"core core core core core core core core core"
"core core core core core core core core core"
"chrn chrn chrn chrn chrn chrn chrn chrn chrn"
".... .... .... .... .... .... .... .... ...."
"attr attr attr attr attr attr attr attr attr"
"abil abil abil abil abil spec spec spec spec"
"abil abil abil abil abil spec spec spec spec"
"abil abil abil abil abil abad abad abad abad"
"abil abil abil abil abil .... .... .... ...."
"abil abil abil abil abil .... .... .... ...."
"abil abil abil abil abil .... .... .... ...."
"slot slot slot slot slot crxp crxp crxp crxp"
"slot slot slot slot slot .... .... .... ...."
"meri meri meri meri meri meri meri meri meri"
"weap weap weap weap weap weap weap weap weap"
"essi essi essi essi essi essi essi essi essi"
"xpxp xpxp xpxp xpxp xpxp xpxp xpxp xpxp xpxp"
"will will will will will will will will will"
"limt limt limt limt limt limt limt limt limt"
"heal heal heal heal heal heal heal heal heal"
".... .... .... .... .... .... .... .... ...."
"inti inti inti inti inti inti inti inti inti"
"inti inti inti inti inti inti inti inti inti"
"char char char char char char char char char";
  }
  
  
  
  .desktop .character-page .page-content .attributeinfo form {
    column-count: 2;
  }
  
  
  
  .desktop .character-page .page-content .rulebooks-used span.row-container {
    display: inline-block;
    width: 100%;
    column-count: 3;
  }
  
  .desktop .character-page .page-content .coreinfo {
    grid-area: core;
  }
  
  .desktop .character-page .page-content .coreinfo form {
    column-count: 1;
  }
  
  
  
  .desktop .character-page .page-content .specialtyinfo input {
    width: 100%;
  }
  
  .desktop .character-page .page-content .specialtyinfo select {
    width: 100%;
  }
  
  
  
  .desktop .character-page .page-content .meritinfo span.row-container {
    display: inline-block;
    column-count: 2;
  }

}

@media (min-width: 1200px) {

  .desktop .character-page .page-content {
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
    grid-template-areas: 
"head head head core core core core core core"
".... .... .... .... .... .... .... .... ...."
".... .... .... .... .... .... .... .... ...."
"attr attr attr attr attr attr attr attr attr"
"abil abil abil spec spec spec meri meri meri"
"abil abil abil spec spec spec meri meri meri"
"abil abil abil spec spec spec meri meri meri"
"abil abil abil spec spec spec meri meri meri"
"abil abil abil chrn chrn chrn meri meri meri"
"abil abil abil chrn chrn chrn meri meri meri"
"abil abil abil abad abad abad abad abad abad"
"abil abil abil .... .... .... .... .... ...."
"slot slot slot slot slot crxp crxp crxp crxp"
"slot slot slot slot slot .... .... .... ...."
".... .... .... .... .... .... .... .... ...."
"essi essi essi essi xpxp xpxp xpxp xpxp xpxp"
".... .... .... .... xpxp xpxp xpxp xpxp xpxp"
"weap weap weap weap weap weap weap weap weap"
"heal heal heal heal heal heal heal heal heal"
"inti inti inti inti inti limt limt limt limt"
"inti inti inti inti inti will will will will"
"inti inti inti inti inti .... .... .... ...."
"char char char char char char char char char";
  }
  
  
  
  .desktop .character-page .page-content .attributeinfo form {
    column-count: 3;
  }
  
  
  
  .desktop .character-page .page-content .rulebooks-used span.row-container {
    column-count: 1;
  }
  
  
  
  .desktop .character-page .page-content .meritinfo span.row-container {
    column-count: 1;
  }
  
  
  
  .desktop .character-page .page-content .intimacyinfo span.row-container {
    column-count: 2;
  }
  
  
  
  .desktop .character-page .page-content .specialtyinfo span.row-container {
    column-count: 1;
  }
  
  
  
  .desktop .character-page .page-content .coreinfo form {
    column-count: 2;
  }

}}

